--- a/public/index.html
+++ b/public/index.html
@@ -106,18 +106,18 @@
   </div>
 
   <!-- المصادر عبر البروكسي /hls/ -->
-  <script>
-    window.sources = {
-      main:  "/hls/jIy7RfNkNJqkZ1008eyc01WH9i4Nh37Q001xqZEdA50000LI.m3u8",
-      cam1:  "/hls/lQPRUXI5ej9dYmgBSy8YYZ6q7H9Rz2hquw8hWULlefA.m3u8",
-      cam2:  "/hls/pp5DAu5IEgXKGPYByNtH23eb3q7wQrCKjWZYQ02h02Rnc.m3u8",
-      cam3:  "/hls/jIy7RfNkNJqkZ1008eyc01WH9i4Nh37Q001xqZEdA50000LI.m3u8",
-      cam4:  "/hls/lQPRUXI5ej9dYmgBSy8YYZ6q7H9Rz2hquw8hWULlefA.m3u8",
-      cam5:  "/hls/pp5DAu5IEgXKGPYByNtH23eb3q7wQrCKjWZYQ02h02Rnc.m3u8",
-      cam6:  "/hls/KjaW9wNOl8XKUE3c3xB2aa502gqRnUHmaA3faW7U6nc00.m3u8",
-      cam7:  "/hls/01ouHRNKSr8StdRxutJ9vay3yoMin00ia004k01KFXqdFJc.m3u8",
-    };
-  </script>
+<script>
+  window.sources = {
+    main:  "/hls/live/playlist.m3u8",     // feed (MAIN)
+    cam1:  "/hls/lastone/playlist.m3u8",  // feed 1 (CAM1)
+    cam2:  "/hls/live2/playlist.m3u8",    // feed 2 (CAM2)
+    cam3:  "/hls/live3/playlist.m3u8",    // feed 3 (CAM3)
+    cam4:  "/hls/live4/playlist.m3u8",    // feed 4 (CAM4)
+    cam5:  "/hls/live5/playlist.m3u8",    // feed 5 (CAM5)
+    cam6:  "/hls/live6/playlist.m3u8",    // feed 6 (SineFlex)
+    cam7:  "/hls/live7/playlist.m3u8",    // feed 7 (DRONE)
+  };
+</script>
 
   <script>
     /* ====== إعدادات عامة ====== */
