--- a/public/index.html
+++ b/public/index.html
@@ -107,16 +107,16 @@
 
   <!-- المصادر عبر البروكسي /hls/ -->
 <script>
-  window.sources = {
-    main:  "/hls/live/playlist.m3u8",     // feed (MAIN)
-    cam1:  "/hls/lastone/playlist.m3u8",  // feed 1 (CAM1)
-    cam2:  "/hls/live2/playlist.m3u8",    // feed 2 (CAM2)
-    cam3:  "/hls/live3/playlist.m3u8",    // feed 3 (CAM3)
-    cam4:  "/hls/live4/playlist.m3u8",    // feed 4 (CAM4)
-    cam5:  "/hls/live5/playlist.m3u8",    // feed 5 (CAM5)
-    cam6:  "/hls/live6/playlist.m3u8",    // feed 6 (SineFlex)
-    cam7:  "/hls/live7/playlist.m3u8",    // feed 7 (DRONE)
-  };
+window.sources = {
+  main:  "/hls/live/playlist.m3u8",
+  cam1:  "/hls/lastone/playlist.m3u8",
+  cam2:  "/hls/live2/playlist.m3u8",
+  cam3:  "/hls/live3/playlist.m3u8",
+  cam4:  "/hls/live4/playlist.m3u8",
+  cam5:  "/hls/live5/playlist.m3u8",
+  cam6:  "/hls/live6/playlist.m3u8",
+  cam7:  "/hls/live7/playlist.m3u8",
+};
 </script>
 
   <script>
