--- a/public/index.html
+++ b/public/index.html
@@ -104,19 +104,19 @@
       <button data-cam="cam7"><span>Sineflex</span></button>
     </div>
   </div>
-
-  <!-- المصادر عبر البروكسي /hls/ -->
+  
 <script>
-window.sources = {
-  main:  "/hls/live/playlist.m3u8",
-  cam1:  "/hls/lastone/playlist.m3u8",
-  cam2:  "/hls/live2/playlist.m3u8",
-  cam3:  "/hls/live3/playlist.m3u8",
-  cam4:  "/hls/live4/playlist.m3u8",
-  cam5:  "/hls/live5/playlist.m3u8",
-  cam6:  "/hls/live6/playlist.m3u8",
-  cam7:  "/hls/live7/playlist.m3u8",
-};
+  <!-- المصادر عبر البروكسي /hls/ -->
+  window.sources = {
+    main: "/hls/live/playlist.m3u8",
+    cam1: "/hls/lastone/playlist.m3u8",
+    cam2: "/hls/live2/playlist.m3u8",
+    cam3: "/hls/live3/playlist.m3u8",
+    cam4: "/hls/live4/playlist.m3u8",
+    cam5: "/hls/live5/playlist.m3u8",
+    cam6: "/hls/live6/playlist.m3u8",   // CineFlex
+    cam7: "/hls/live7/playlist.m3u8"    // DRONE
+  };
 </script>
 
   <script>
